kube/prod/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-masjid-app
  labels:
    app: masjid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: masjid
  template:
    metadata:
      labels:
        app: masjid
    spec:
      containers:
        - image: ghcr.io/fourfridays/masjid:latest
          name: masjid
          ports:
            - containerPort: 8080
              name: gunicorn
---
apiVersion: v1
kind: Service
metadata:
  name: svc
  labels:
    app: masjid
spec:
  selector:
    app: masjid
  ports:
    - port: 8088
      targetPort: 8080
  type: ClusterIP
