kube/prod/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  tls:
  - hosts:
    - masjid.fourfridays.com
    secretName: masjid-tls
  rules:
  - host: masjid.fourfridays.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc
              port:
                number: 8088
